--- a/index.html
+++ b/index.html
@@ -2,35 +2,56 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>untuk levy</title>
-  <meta name="description" content="Sebuah kode spesial bernama 'untuk levy' yang menampilkan gambar lope untuk orang istimewa.">
-  <meta name="keywords" content="untuk levy, lope, love, hati, gambar hati, kode rahasia levy">
-  <meta name="author" content="Kamu">
+  <title>Untuk Levy</title>
   <style>
     body {
-      font-family: sans-serif;
-      text-align: center;
-      margin-top: 60px;
       background-color: #fff0f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
     }
-    h1 {
-      font-size: 2.5em;
-      color: #e91e63;
+
+    .heart {
+      position: relative;
+      width: 100px;
+      height: 90px;
     }
-    p {
-      font-size: 1.2em;
-      color: #555;
+
+    .heart::before,
+    .heart::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 100px;
+      height: 160px;
+      border: 3px solid red;
+      border-radius: 100px 100px 0 0;
+      transform: rotate(-45deg);
+      transform-origin: 0 100%;
     }
-    img {
-      margin-top: 20px;
-      border-radius: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+
+    .heart::after {
+      left: 100px;
+      transform: rotate(45deg);
+      transform-origin: 100% 100%;
+    }
+
+    .text {
+      margin-top: 30px;
+      font-size: 24px;
+      color: #d63384;
+      font-weight: bold;
+      text-align: center;
+      text-shadow: 1px 1px 2px #ff69b4;
     }
   </style>
 </head>
 <body>
-  <h1>❤️ Untuk Levy ❤️</h1>
-  <p>Kode ini dibuat khusus untuk Levy. Lihat lope-nya!</p>
-  <img src="https://i.imgur.com/4AiXzf8.jpeg" alt="Gambar Lope" width="300">
+  <div class="heart"></div>
+  <div class="text">Levy cantik banget</div>
 </body>
-  </html>
+</html>
