--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       background-color: #fff0f5;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -17,36 +17,38 @@
 
     .heart {
       position: relative;
-      width: 100px;
-      height: 90px;
+      width: 150px;
+      height: 135px;
+      transform: rotate(-45deg);
     }
 
     .heart::before,
     .heart::after {
       content: "";
       position: absolute;
-      top: 0;
-      width: 100px;
-      height: 160px;
-      border: 3px solid red;
-      border-radius: 100px 100px 0 0;
-      transform: rotate(-45deg);
-      transform-origin: 0 100%;
+      width: 150px;
+      height: 150px;
+      border: 4px solid red;
+      border-radius: 50%;
+    }
+
+    .heart::before {
+      top: -75px;
+      left: 0;
     }
 
     .heart::after {
-      left: 100px;
-      transform: rotate(45deg);
-      transform-origin: 100% 100%;
+      top: 0;
+      left: 75px;
     }
 
     .text {
-      margin-top: 30px;
-      font-size: 24px;
+      margin-top: 50px;
+      font-size: 26px;
       color: #d63384;
       font-weight: bold;
-      text-align: center;
       text-shadow: 1px 1px 2px #ff69b4;
+      transform: rotate(0deg);
     }
   </style>
 </head>
